--- a/questions/32.html
+++ b/questions/32.html
@@ -15,7 +15,7 @@
     <p>I love DOM manipulation!</p>
 
 <pre><code class="language-js">function coolFunc() {
-    return document.getElementById.constructor("return 1 + 1");
+    return document.getElementById.constructor("return 1 + 1")();
 }</code></pre>
 
     <div class="answers">
