--- a/questions/8.html
+++ b/questions/8.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">1</a>
+        <a href="fail.html">"1"</a>
         <a href="fail.html">NaN</a>
         <a href="fail.html">"2"</a>
-        <a href="9.html">"1"</a>
+        <a href="9.html">1</a>
     </div>
 </main>
 </body>
