--- a/questions/1.html
+++ b/questions/1.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="2.html">1</a>
-        <a href="fail.html">undefined</a>
-        <a href="fail.html">null</a>
-        <a href="fail.html">NaN</a>
+        <a onclick="window.location.href = '2.html'">1</a>
+        <a onclick="window.location.href = 'fail.html'">undefined</a>
+        <a onclick="window.location.href = 'fail.html'">null</a>
+        <a onclick="window.location.href = 'fail.html'">NaN</a>
     </div>
 </main>
 </body>
