--- a/questions/11.html
+++ b/questions/11.html
@@ -24,10 +24,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">10</a>
-        <a href="12.html">20</a>
-        <a href="fail.html">30</a>
-        <a href="fail.html">SyntaxError</a>
+        <a onclick="window.location.href = 'fail.html'">10</a>
+        <a onclick="window.location.href = '12.html'">20</a>
+        <a onclick="window.location.href = 'fail.html'">30</a>
+        <a onclick="window.location.href = 'fail.html'">SyntaxError</a>
     </div>
 </main>
 </body>
