--- a/questions/13.html
+++ b/questions/13.html
@@ -25,10 +25,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">10</a>
-        <a href="fail.html">20</a>
-        <a href="fail.html">30</a>
-        <a href="14.html">SyntaxError</a>
+        <a onclick="window.location.href = 'fail.html'">10</a>
+        <a onclick="window.location.href = 'fail.html'">20</a>
+        <a onclick="window.location.href = 'fail.html'">30</a>
+        <a onclick="window.location.href = '14.html'">SyntaxError</a>
     </div>
 </main>
 </body>
