--- a/questions/14.html
+++ b/questions/14.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="15.html">NaN</a>
-        <a href="fail.html">undefined</a>
-        <a href="fail.html">SyntaxError</a>
-        <a href="fail.html">"Hello"</a>
+        <a onclick="window.location.href = '15.html'">NaN</a>
+        <a onclick="window.location.href = 'fail.html'">undefined</a>
+        <a onclick="window.location.href = 'fail.html'">SyntaxError</a>
+        <a onclick="window.location.href = 'fail.html'">"Hello"</a>
     </div>
 </main>
 </body>
