--- a/questions/15.html
+++ b/questions/15.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">NaN</a>
-        <a href="fail.html">""</a>
-        <a href="fail.html">SyntaxError</a>
-        <a href="16.html">0</a>
+        <a onclick="window.location.href = 'fail.html'">NaN</a>
+        <a onclick="window.location.href = 'fail.html'">""</a>
+        <a onclick="window.location.href = 'fail.html'">SyntaxError</a>
+        <a onclick="window.location.href = '16.html'">0</a>
     </div>
 </main>
 </body>
