--- a/questions/17.html
+++ b/questions/17.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">1</a>
-        <a href="fail.html">2</a>
-        <a href="18.html">3</a>
-        <a href="fail.html">4</a>
+        <a onclick="window.location.href = 'fail.html'">1</a>
+        <a onclick="window.location.href = 'fail.html'">2</a>
+        <a onclick="window.location.href = '18.html'">3</a>
+        <a onclick="window.location.href = 'fail.html'">4</a>
     </div>
 </main>
 </body>
