--- a/questions/20.html
+++ b/questions/20.html
@@ -19,9 +19,9 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">true</a>
-        <a href="21.html">false</a>
-        <a href="fail.html">Error</a>
+        <a onclick="window.location.href = 'fail.html'">true</a>
+        <a onclick="window.location.href = '21.html'">false</a>
+        <a onclick="window.location.href = 'fail.html'">Error</a>
     </div>
 </main>
 </body>
