--- a/questions/22.html
+++ b/questions/22.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">true</a>
-        <a href="23.html">false</a>
-        <a href="fail.html">Error</a>
-        <a href="fail.html">NaN</a>
+        <a onclick="window.location.href = 'fail.html'">true</a>
+        <a onclick="window.location.href = '23.html'">false</a>
+        <a onclick="window.location.href = 'fail.html'">Error</a>
+        <a onclick="window.location.href = 'fail.html'">NaN</a>
     </div>
 </main>
 </body>
