--- a/questions/23.html
+++ b/questions/23.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">"NaN"</a>
-        <a href="fail.html">"string"</a>
-        <a href="fail.html">"boolean"</a>
-        <a href="24.html">"number"</a>
+        <a onclick="window.location.href = 'fail.html'">"NaN"</a>
+        <a onclick="window.location.href = 'fail.html'">"string"</a>
+        <a onclick="window.location.href = 'fail.html'">"boolean"</a>
+        <a onclick="window.location.href = '24.html'">"number"</a>
     </div>
 </main>
 </body>
