--- a/questions/24.html
+++ b/questions/24.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">18</a>
-        <a href="fail.html">17</a>
-        <a href="fail.html">16</a>
-        <a href="25.html">15</a>
+        <a onclick="window.location.href = 'fail.html'">18</a>
+        <a onclick="window.location.href = 'fail.html'">17</a>
+        <a onclick="window.location.href = 'fail.html'">16</a>
+        <a onclick="window.location.href = '25.html'">15</a>
     </div>
 </main>
 </body>
