--- a/questions/26.html
+++ b/questions/26.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">"bacteria"</a>
-        <a href="fail.html">SyntaxError</a>
-        <a href="27.html">"baNaNa"</a>
-        <a href="fail.html">"bacteacteri"</a>
+        <a onclick="window.location.href = 'fail.html'">"bacteria"</a>
+        <a onclick="window.location.href = 'fail.html'">SyntaxError</a>
+        <a onclick="window.location.href = '27.html'">"baNaNa"</a>
+        <a onclick="window.location.href = 'fail.html'">"bacteacteri"</a>
     </div>
 </main>
 </body>
