--- a/questions/28.html
+++ b/questions/28.html
@@ -19,9 +19,9 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">0.199999999999999998</a>
-        <a href="29.html">0.2</a>
-        <a href="fail.html">0.20000000000000004</a>
+        <a onclick="window.location.href = 'fail.html'">0.199999999999999998</a>
+        <a onclick="window.location.href = '29.html'">0.2</a>
+        <a onclick="window.location.href = 'fail.html'">0.20000000000000004</a>
     </div>
 </main>
 </body>
