--- a/questions/29.html
+++ b/questions/29.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="30.html">1</a>
-        <a href="fail.html">5</a>
-        <a href="fail.html">6</a>
-        <a href="fail.html">8</a>
+        <a onclick="window.location.href = '30.html'">1</a>
+        <a onclick="window.location.href = 'fail.html'">5</a>
+        <a onclick="window.location.href = 'fail.html'">6</a>
+        <a onclick="window.location.href = 'fail.html'">8</a>
     </div>
 </main>
 </body>
