--- a/questions/3.html
+++ b/questions/3.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">1</a>
-        <a href="fail.html">undefined</a>
-        <a href="fail.html">null</a>
-        <a href="4.html">"Hello"</a>
+        <a onclick="window.location.href = 'fail.html'">1</a>
+        <a onclick="window.location.href = 'fail.html'">undefined</a>
+        <a onclick="window.location.href = 'fail.html'">null</a>
+        <a onclick="window.location.href = '4.html'">"Hello"</a>
     </div>
 </main>
 </body>
