--- a/questions/30.html
+++ b/questions/30.html
@@ -21,10 +21,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">undefined</a>
-        <a href="fail.html">null</a>
-        <a href="31.html">1</a>
-        <a href="fail.html">Error</a>
+        <a onclick="window.location.href = 'fail.html'">undefined</a>
+        <a onclick="window.location.href = 'fail.html'">null</a>
+        <a onclick="window.location.href = '31.html'">1</a>
+        <a onclick="window.location.href = 'fail.html'">Error</a>
     </div>
 </main>
 </body>
