--- a/questions/31.html
+++ b/questions/31.html
@@ -21,10 +21,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">10</a>
-        <a href="32.html">20</a>
-        <a href="fail.html">Error</a>
-        <a href="fail.html">1</a>
+        <a onclick="window.location.href = 'fail.html'">10</a>
+        <a onclick="window.location.href = '32.html'">20</a>
+        <a onclick="window.location.href = 'fail.html'">Error</a>
+        <a onclick="window.location.href = 'fail.html'">1</a>
     </div>
 </main>
 </body>
