--- a/questions/32.html
+++ b/questions/32.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="33.html">2</a>
-        <a href="fail.html">Error</a>
-        <a href="fail.html">The html element with id: "return 1 + 1"</a>
-        <a href="fail.html">"2"</a>
+        <a onclick="window.location.href = '33.html'">2</a>
+        <a onclick="window.location.href = 'fail.html'">Error</a>
+        <a onclick="window.location.href = 'fail.html'">The html element with id: "return 1 + 1"</a>
+        <a onclick="window.location.href = 'fail.html'">"2"</a>
     </div>
 </main>
 </body>
