--- a/questions/34.html
+++ b/questions/34.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">NaN</a>
-        <a href="fail.html">undefined</a>
-        <a href="fail.html">null</a>
-        <a href="35.html">"fail"</a>
+        <a onclick="window.location.href = 'fail.html'">NaN</a>
+        <a onclick="window.location.href = 'fail.html'">undefined</a>
+        <a onclick="window.location.href = 'fail.html'">null</a>
+        <a onclick="window.location.href = '35.html'">"fail"</a>
     </div>
 </main>
 </body>
