--- a/questions/36.html
+++ b/questions/36.html
@@ -317,11 +317,11 @@
 
     
     <div class="answers">
-        <a href="fail.html">?????</a>
-        <a href="fail.html">Alerts "fail"</a>
-        <a href="fail.html">Ah yes...</a>
-        <a href="fail.html">I'm done</a>
-        <a href="game.html">Hmmhh, yea what if this spawned a canvas with a square moving around</a>
+        <a onclick="window.location.href = 'fail.html'">?????</a>
+        <a onclick="window.location.href = 'fail.html'">Alerts "fail"</a>
+        <a onclick="window.location.href = 'fail.html'">Ah yes...</a>
+        <a onclick="window.location.href = 'fail.html'">I'm done</a>
+        <a onclick="window.location.href = 'game.html'">Hmmhh, yea what if this spawned a canvas with a square moving around</a>
     </div>
 </main>
 </body>
