--- a/questions/4.html
+++ b/questions/4.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">NaN</a>
-        <a href="fail.html">"Hello4"</a>
-        <a href="fail.html">Error</a>
-        <a href="5.html">"Hello13"</a>
+        <a onclick="window.location.href = 'fail.html'">NaN</a>
+        <a onclick="window.location.href = 'fail.html'">"Hello4"</a>
+        <a onclick="window.location.href = 'fail.html'">Error</a>
+        <a onclick="window.location.href = '5.html'">"Hello13"</a>
     </div>
 </main>
 </body>
