--- a/questions/7.html
+++ b/questions/7.html
@@ -22,10 +22,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="8.html">18 if value is 18 or higher, value if value is lower than 18</a>
-        <a href="fail.html">18</a>
-        <a href="fail.html">18 when value is 18 or higher, when lower, returns 0</a>
-        <a href="fail.html">undefined</a>
+        <a onclick="window.location.href = '8.html'">18 if value is 18 or higher, value if value is lower than 18</a>
+        <a onclick="window.location.href = 'fail.html'">18</a>
+        <a onclick="window.location.href = 'fail.html'">18 when value is 18 or higher, when lower, returns 0</a>
+        <a onclick="window.location.href = 'fail.html'">undefined</a>
     </div>
 </main>
 </body>
