--- a/questions/9.html
+++ b/questions/9.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">1</a>
-        <a href="fail.html">"11"</a>
-        <a href="10.html">2</a>
-        <a href="fail.html">Error</a>
+        <a onclick="window.location.href = 'fail.html'">1</a>
+        <a onclick="window.location.href = 'fail.html'">"11"</a>
+        <a onclick="window.location.href = '10.html'">2</a>
+        <a onclick="window.location.href = 'fail.html'">Error</a>
     </div>
 </main>
 </body>
