--- a/questions/end.html
+++ b/questions/end.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">"GoodMorning!"</a>
-        <a href="fail.html">"GoodAfternoon!"</a>
-        <a href="fail.html">"GoodEvening!"</a>
-        <a href="fail.html">"GoodDay!"</a>
+        <a onclick="window.location.href = 'fail.html'">"GoodMorning!"</a>
+        <a onclick="window.location.href = 'fail.html'">"GoodAfternoon!"</a>
+        <a onclick="window.location.href = 'fail.html'">"GoodEvening!"</a>
+        <a onclick="window.location.href = 'fail.html'">"GoodDay!"</a>
     </div>
 </main>
 </body>
