--- a/questions/game.html
+++ b/questions/game.html
@@ -623,7 +623,7 @@
 </script>
 
 <div class="answers">
-    <a href="end.html">Finish quiz</a>
+    <a onclick="window.location.href = 'end.html'">Finish quiz</a>
 </div>
 
 </main>
