--- a/questions/10.html
+++ b/questions/10.html
@@ -22,10 +22,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">10</a>
-        <a href="fail.html">20</a>
-        <a href="fail.html">30</a>
-        <a href="11.html">SyntaxError</a>
+        <a onclick="window.location.href = 'fail.html'">10</a>
+        <a onclick="window.location.href = 'fail.html'">20</a>
+        <a onclick="window.location.href = 'fail.html'">30</a>
+        <a onclick="window.location.href = '11.html'">SyntaxError</a>
     </div>
 </main>
 </body>
