--- a/questions/12.html
+++ b/questions/12.html
@@ -25,10 +25,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="13.html">10</a>
-        <a href="fail.html">20</a>
-        <a href="fail.html">30</a>
-        <a href="fail.html">SyntaxError</a>
+        <a onclick="window.location.href = '13.html'">10</a>
+        <a onclick="window.location.href = 'fail.html'">20</a>
+        <a onclick="window.location.href = 'fail.html'">30</a>
+        <a onclick="window.location.href = 'fail.html'">SyntaxError</a>
     </div>
 </main>
 </body>
