--- a/questions/25.html
+++ b/questions/25.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">16</a>
-        <a href="26.html">15</a>
-        <a href="fail.html">14</a>
-        <a href="fail.html">13</a>
+        <a onclick="window.location.href = 'fail.html'">16</a>
+        <a onclick="window.location.href = '26.html'">15</a>
+        <a onclick="window.location.href = 'fail.html'">14</a>
+        <a onclick="window.location.href = 'fail.html'">13</a>
     </div>
 </main>
 </body>
