--- a/questions/27.html
+++ b/questions/27.html
@@ -19,9 +19,9 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">0.299999999999999998</a>
-        <a href="fail.html">0.3</a>
-        <a href="28.html">0.30000000000000004</a>
+        <a onclick="window.location.href = 'fail.html'">0.299999999999999998</a>
+        <a onclick="window.location.href = 'fail.html'">0.3</a>
+        <a onclick="window.location.href = '28.html'">0.30000000000000004</a>
     </div>
 </main>
 </body>
