--- a/questions/33.html
+++ b/questions/33.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">"0"</a>
-        <a href="fail.html">"1"</a>
-        <a href="fail.html">undefined</a>
-        <a href="34.html">"no"</a>
+        <a onclick="window.location.href = 'fail.html'">"0"</a>
+        <a onclick="window.location.href = 'fail.html'">"1"</a>
+        <a onclick="window.location.href = 'fail.html'">undefined</a>
+        <a onclick="window.location.href = '34.html'">"no"</a>
     </div>
 </main>
 </body>
