--- a/questions/35.html
+++ b/questions/35.html
@@ -22,10 +22,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">?????</a>
-        <a href="fail.html">Alerts "fail"</a>
-        <a href="fail.html">"fail"</a>
-        <a href="36.html">2</a>
+        <a onclick="window.location.href = 'fail.html'">?????</a>
+        <a onclick="window.location.href = 'fail.html'">Alerts "fail"</a>
+        <a onclick="window.location.href = 'fail.html'">"fail"</a>
+        <a onclick="window.location.href = '36.html'">2</a>
     </div>
 </main>
 </body>
