--- a/questions/5.html
+++ b/questions/5.html
@@ -19,10 +19,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">2</a>
-        <a href="fail.html">"11Woaaah"</a>
-        <a href="fail.html">Error</a>
-        <a href="6.html">"2Woaaah"</a>
+        <a onclick="window.location.href = 'fail.html'">2</a>
+        <a onclick="window.location.href = 'fail.html'">"11Woaaah"</a>
+        <a onclick="window.location.href = 'fail.html'">Error</a>
+        <a onclick="window.location.href = '6.html'">"2Woaaah"</a>
     </div>
 </main>
 </body>
