--- a/questions/6.html
+++ b/questions/6.html
@@ -23,10 +23,10 @@
 }</code></pre>
 
     <div class="answers">
-        <a href="fail.html">2</a>
-        <a href="fail.html">2 if value is falsy, 1 if value is truthy</a>
-        <a href="7.html">1 if value is falsy, 2 if value is truthy</a>
-        <a href="fail.html">Error</a>
+        <a onclick="window.location.href = 'fail.html'">2</a>
+        <a onclick="window.location.href = 'fail.html'">2 if value is falsy, 1 if value is truthy</a>
+        <a onclick="window.location.href = '7.html'">1 if value is falsy, 2 if value is truthy</a>
+        <a onclick="window.location.href = 'fail.html'">Error</a>
     </div>
 </main>
 </body>
