--- a/questions/fail.html
+++ b/questions/fail.html
@@ -15,7 +15,7 @@
     <p>Everyone fails eventually</p>
 
     <div class="answers">
-        <a href="../index.html">Back to start</a>
+        <a onclick="window.location.href = '../index.html'">Back to start</a>
     </div>
 </body>
 </html>
