fixed index link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>How far can you get?</p>
 
         <div>
-            <a href="questions/1.html'">Question 1</a>
+            <a onclick="window.location.href = 'questions/1.html'">Question 1</a>
         </div>
     </main>
 </body>
